# rustjay-404

./: .gitignore  ARCHITECTURE.md  Cargo.toml  HAP_DECODER_PLAN.md  INTERAPP_SUMMARY.md  INTER_APP_VIDEO.md  README.md  ROADMAP.md  SETUP.md  SYPHON_COMPARISON.md  SYPHON_CRATE_PROPOSAL.md  build.rs  rustjay404.toml  test_loop.sh
.github/workflows/: ci.yml  release.yml
macos/: AppIcon.icns  Info.plist
presets/Default/: dino.json  jfis.json  jfish.json  mixed.json  yeww.json
src/: lfo.rs  lib.rs  main.rs  preset.rs
src/app/: config.rs  mod.rs  state.rs
src/audio/: device.rs  fft.rs  mod.rs  routing.rs
src/engine/: context.rs  mixer.rs  mixer.wgsl  mixer_advanced.wgsl  mod.rs  resources.rs  video_renderer.rs  video_shader.wgsl
src/engine/effects/: chain.rs  mod.rs
src/engine/output/: mod.rs  ndi.rs
src/input/: events.rs  keyboard.rs  midi.rs  midi_mapping.rs  mod.rs  osc.rs  router.rs
src/output/: mod.rs  ndi_output.rs
src/sampler/: bank.rs  library.rs  mod.rs  pad.rs  sample.rs  thumbnail.rs
src/sequencer/: clock.rs  engine.rs  mod.rs  pattern.rs  step.rs  track.rs
src/ui/: context.rs  mod.rs  style.rs
src/ui/widgets/: mod.rs  pad_grid.rs  sequencer.rs
src/ui/windows/: audio.rs  browser.rs  lfo.rs  main.rs  mod.rs  preview.rs  sequencer.rs  settings.rs  video_settings.rs
src/util/: mod.rs  thread.rs  time.rs
src/video/: import.rs  mod.rs  recorder.rs  texture_pool.rs
src/video/capture/: mod.rs  ndi.rs  webcam.rs
src/video/decoder/: boundary_cached.rs  cached.rs  ffmpeg.rs  hap.rs  hap_ffmpeg.rs  hap_wgpu.rs  mod.rs  streaming.rs
src/video/encoder/: decode.rs  mod.rs  native.rs
src/video/interapp/: mod.rs  spout.rs  syphon.rs  syphon_input.rs  v4l2loopback.rs
src/video_input/: mod.rs  ndi.rs
syphon_design/: README.md
